--- a/groth1alt.tex
+++ b/groth1alt.tex
@@ -35,6 +35,7 @@
 %   {\end{leftbar}\end{exmp}}
 
 \documentclass[numbers=enddot,12pt,final,onecolumn,notitlepage]{scrartcl}%
+\usepackage[headsepline,footsepline,manualmark]{scrlayer-scrpage}
 \usepackage[all,cmtip]{xy}
 \usepackage{amsfonts}
 \usepackage{amssymb}
@@ -47,7 +48,6 @@
 \usepackage[sc]{mathpazo}
 \usepackage[T1]{fontenc}
 \usepackage{amsthm}
-\usepackage{fancyhdr}
 \usepackage{ytableau}
 \usepackage{tabu}
 %TCIDATA{OutputFilter=latex2.dll}
@@ -131,9 +131,8 @@
 \renewcommand{\prod}{\prodnonlimits\limits}
 \setlength\textheight{22.5cm}
 \setlength\textwidth{15cm}
-\pagestyle{fancy}
-\lhead{Refined dual stable Grothendieck polynomials}
-\rhead{\today}
+\ihead{Refined dual stable Grothendieck polynomials}
+\ohead{\today}
 \begin{document}
 
 \title{Refined dual stable Grothendieck polynomials and generalized Bender-Knuth involutions}
