Added a new sentence to the introduction

--- a/groth1.tex
+++ b/groth1.tex
@@ -236,6 +236,9 @@ proof reflects back on the first, in particular providing an
 alternative definition of the generalized Bender-Knuth involutions
 constructed in the first proof, and showing that these involutions
 are (in a sense) ``the only reasonable choice''.
+We notice that both our proofs are explicitly bijective, unlike
+the proof of \cite[Theorem 9.1]{LamPyl} which relies on computations
+in an algebra of operators.
 
 The present paper is organized as follows: In Section \ref{sect.notations}, we
 recall classical definitions and introduce notations pertaining to
