latex changes since the old version no longer compiles

--- a/groth1.tex
+++ b/groth1.tex
@@ -31,6 +31,7 @@
 \usepackage{amsthm}
 \usepackage{ytableau}
 \usepackage{tabu}
+\usepackage{float}
 %TCIDATA{OutputFilter=latex2.dll}
 %TCIDATA{Version=5.50.0.2960}
 %TCIDATA{LastRevised=Monday, June 08, 2015 22:39:34}
@@ -790,7 +791,7 @@ For an arbitrary 12-table it can happen also that two mixed columns form a desce
 For each of the three types of descents, we will define what it means to \textit{resolve} this descent. This is an operation which transforms the 12-table $P$ by changing the entries in its $k$-th and $\left(k+1\right)$-th columns. These changes can be informally explained by Figure \ref{fig:des-res-preliminary}:
 
 
-\begin{figure}[here]
+\begin{figure}[H]
  
 \begin{tabular}{||ccc||ccc||ccc||}\hline
  & & & & & & & & \\
