cite extended abstract

--- a/groth1.tex
+++ b/groth1.tex
@@ -260,6 +260,9 @@ and \ref{sect.proof}
 (also showing that it is the unique involution that shares certain natural
 properties with the classical Bender-Knuth involutions).
 
+An extended abstract of this paper, omitting the proofs, is to appear
+as \cite{GaGrLi16}.
+
 \begin{todo}
 \begin{itemize}
 \item More reasons why the reader should
@@ -3088,6 +3091,13 @@ doi:10.1016/S0012-365X(98)00140-X.
 
 \bibitem[Fulton97]{Fulton97}William Fulton, \textit{Young Tableaux}, London
 Mathematical Society Student Texts 35, Cambridge University Press 1997.
+
+\bibitem[GaGrLi16]{GaGrLi16}Pavel Galashin, Darij Grinberg, Gaku Liu,
+\textit{Refined dual stable Grothendieck polynomials
+and generalized Bender-Knuth involutions (extended abstract)},
+FPSAC 2016, to appear in:
+Discrete Mathematics and Theoretical Computer Science,
+\url{http://www.lix.polytechnique.fr/~pilaud/FPSAC16/final_138}.
 
 \bibitem[GriRei15]{GriRei15}Darij Grinberg, Victor Reiner, \textit{Hopf
 algebras in Combinatorics}, August 25, 2015,
