--- a/groth1.tex
+++ b/groth1.tex
@@ -164,7 +164,7 @@ and $2$.
 
 Thomas Lam and Pavlo Pylyavskyy, in \cite[\S 9.1]{LamPyl}, (and earlier Mark
 Shimozono and Mike Zabrocki in unpublished work of 2003) studied \textit{dual
-stable Grothendieck polynomials}, a deformation (in a sense) of the Schur
+stable Grothendieck polynomials}, a deformation of the Schur
 functions. Let us briefly recount their definition.
 \begin{comment}
  
@@ -201,11 +201,12 @@ $x_{1}^{a_{1}}x_{2}^{a_{2}}x_{3}^{a_{3}}\cdots$ whose $i$-th exponent $a_{i}$
 is the number of \textit{columns} (rather than cells) %this is important enough to be repeated two times -- [PG]
 of $T$ containing the entry $i$. As proven in
 \cite[\S 9.1]{LamPyl}, this power series $g_{\lambda/\mu}$ is a symmetric
-function (albeit, unlike $s_{\lambda/\mu}$, an inhomogeneous one in general).
-Lam and Pylyavskyy connect the $g_{\lambda/\mu}$ to the (more familiar)
-\textit{stable Grothendieck polynomials} $G_{\lambda/\mu}$ (via a duality
-between the symmetric functions and their completion, which explains the name
-of the $g_{\lambda/\mu}$; see \cite[\S 9.4]{LamPyl}) and to the $K$-theory of
+function, albeit, unlike $s_{\lambda/\mu}$, an inhomogeneous one in general.
+Lam and Pylyavskyy connect the $g_{\lambda/\mu}$ to the
+\textit{stable Grothendieck polynomials} $G_{\lambda/\mu}$ via a duality
+% between the symmetric functions and their completion, which explains the name
+% of the $g_{\lambda/\mu}$; see 
+(\cite[\S 9.4]{LamPyl}) and to the $K$-theory of
 Grassmannians (\cite[\S 9.5]{LamPyl}).
 
 We devise a common generalization of the dual stable Grothendieck polynomial
@@ -226,17 +227,16 @@ $s_{\lambda/\mu}$ when all the $t_{i}$ are set to $0$.
 
 Our main result, Theorem \ref{thm.gtilde.symm}, states that
 $\widetilde{g}_{\lambda/\mu}$ is a symmetric function (in the $x_{1}%
-,x_{2},x_{3},\ldots$).
+,x_{2},x_{3},\ldots$). This generalizes \cite[Theorem 9.1]{LamPyl}.
 
-We prove this result (thus obtaining a new proof of
-\cite[Theorem 9.1]{LamPyl}) first using an elaborate generalization
+We prove this result first using an elaborate generalization
 of the classical Bender-Knuth involutions to reverse plane partitions,
 and then for a second time by analyzing the structure of reverse plane
 partitions whose entries lie in $\left\{1, 2\right\}$. The second
 proof reflects back on the first, in particular providing an
 alternative definition of the generalized Bender-Knuth involutions
 constructed in the first proof, and showing that these involutions
-are (in a sense) ``the only reasonable choice''.
+are ``the only reasonable choice'' in a sense that we clarify.
 We notice that both our proofs are explicitly bijective, unlike
 the proof of \cite[Theorem 9.1]{LamPyl} which relies on computations
 in an algebra of operators.
@@ -246,8 +246,8 @@ recall classical definitions and introduce notations pertaining to
 combinatorics and symmetric functions. In Section \ref{sect.def}, we define
 the refined dual stable Grothendieck polynomials $\widetilde{g}_{\lambda/\mu}$, state
 our main result (that they are symmetric functions), and do the first steps of
-its proof (by reducing it to a purely combinatorial statement about the
-existence of an involution with certain properties). In Section \ref{sect.construction}, we describe the idea of constructing this involution in an elementary way without proofs. In Section
+its proof, by reducing it to a purely combinatorial statement about the
+existence of an involution with certain properties. In Section \ref{sect.construction}, we describe the idea of constructing this involution in an elementary way without proofs. In Section
 \ref{sect.proof}, we prove various properties of this involution advertised in Section \ref{sect.construction}, thus finishing the proof of our main result. In Section \ref{sect.BKclassical}, we
 recapitulate the definition of the classical Bender-Knuth involution, and
 show that our involution is a generalization of the latter.
@@ -291,8 +291,9 @@ Keep this up to date.
 
 \section{\label{sect.notations}Notations and definitions}
 
-Let us begin by defining our notations (including some standard conventions
-from algebraic combinatorics).
+Let us begin by defining our notations.
+% (including some standard conventions
+% from algebraic combinatorics).
 
 \subsection{Partitions and tableaux}
 
@@ -300,7 +301,7 @@ We set $\mathbb{N}=\left\{  0,1,2,\ldots\right\}  $ and $\mathbb{N}%
 _{+}=\left\{  1,2,3,\ldots\right\}  $. 
 
 
- A sequence $\alpha=\left(\alpha_{1},\alpha_{2},\alpha_{3},\ldots\right)$ of nonnegative integers is called a \textit{weak composition} if the sum of its entries (denoted $\left\vert \alpha\right\vert$) is finite.
+ A sequence $\alpha=\left(\alpha_{1},\alpha_{2},\alpha_{3},\ldots\right)$ of nonnegative integers is called a \textit{weak composition} if the sum of its entries is finite. This sum is denoted by $\left\vert \alpha\right\vert$.
  We shall always write $\alpha_i$ for the $i$-th entry of a weak composition $\alpha$.
 
 
@@ -335,7 +336,9 @@ A \textit{skew partition} $\lambda/\mu$ is a pair $\left(\lambda, \mu\right)$ of
  If $\lm$ is a skew partition, then a \textit{filling} of $\lm$ means a map $T:\lm\rightarrow\Nplus$. It is visually represented by drawing $\lm$ and filling each box $c$ with the entry $T(c)$. Three examples of a filling can be found on Figure \ref{fig:fillings}.
  
 
- A filling $T:\lm\rightarrow\Nplus$ of $\lm$ is called a \textit{reverse plane partition of shape $\lm$} if its values increase weakly in each row of $\lm$ from left to right and in each column of $\lm$ from top to bottom. If, in addition, the values of $T$ increase strictly down each column, then $T$ is called a \textit{semistandard tableau of shape $\lm$}. (See Fulton's \cite{Fulton97} for an exposition of properties and applications of semistandard tableaux\footnote{Fulton calls semistandard tableaux just ``tableaux'', but otherwise is consistent with most of our notation.}.) We denote the set of all reverse plane partitions of shape $\lm$ by $\operatorname{RPP}\left(  \lambda/\mu\right)$.  We abbreviate reverse plane partitions as \textit{rpps}. 
+ A filling $T:\lm\rightarrow\Nplus$ of $\lm$ is called a \textit{reverse plane partition of shape $\lm$} if its values increase weakly in each row of $\lm$ from left to right and in each column of $\lm$ from top to bottom. If, in addition, the values of $T$ increase strictly down each column, then $T$ is called a \textit{semistandard tableau of shape $\lm$}. (See Fulton's \cite{Fulton97} for an exposition of properties and applications of semistandard tableaux.)
+ %\footnote{Fulton calls semistandard tableaux just ``tableaux'', but otherwise is consistent with most of our notation.}.)
+ We denote the set of all reverse plane partitions of shape $\lm$ by $\operatorname{RPP}\left(  \lambda/\mu\right)$.  We abbreviate reverse plane partitions as \textit{rpps}. 
  
  Examples of an rpp, of a non-rpp and of a semistandard tableau can be found on Figure \ref{fig:fillings}.
  
@@ -679,10 +682,11 @@ involution $\mathbf{B}_{i}:\operatorname{RPP}\left(  \lambda/\mu\right)
 This involution $\mathbf{B}_{i}$ is a generalization of the $i$-th
 Bender-Knuth involution defined for semistandard tableaux (see, e.g.,
 \cite[proof of Proposition 2.11]{GriRei15}), but its definition is more
-complicated than that of the latter.\footnote{We will compare our involution
+complicated than that of the latter. Defining it and proving its
+properties will take a significant part of this paper.
+We will compare our involution
 $\mathbf{B}_{i}$ with the $i$-th Bender-Knuth involution in Section
-\ref{sect.BKclassical}.} Defining it and proving its properties will take a
-significant part of this paper.
+\ref{sect.BKclassical}.
 
 \begin{proof}[Proof of Theorem~\ref{thm.gtilde.symm} using
 Theorem~\ref{thm.BK}.]
@@ -991,11 +995,12 @@ then $\operatorname*{sep}\nolimits_{1}T=4$, $\operatorname*{sep}\nolimits_{3}T=4
 $\operatorname*{sep}\nolimits_{5}T=2$ (and there are no other $k$ for which $\operatorname*{sep}\nolimits_{k}T$ is defined), so that $\operatorname*{seplist}T=\left(  4,4,2\right)  $.
 
 We say that a 12-table $T$ is \textit{benign} if the list
-$\operatorname*{seplist}T$ is weakly decreasing.\footnote{For
+$\operatorname*{seplist}T$ is weakly decreasing. For
 example, the 12-table in (\ref{eq.example-12-table.1}) is benign,
 but replacing its third column by $\left(1,2,2\right)$ and its
 fourth column by $\left(1,1,2\right)$ would yield a 12-table
-which is not benign.}
+which is not benign.
+
 %For instance, the 12-table
 %$T=%
 %TCIMACRO{\TeXButton{Y}{\ytableausetup{notabloids}
@@ -1037,7 +1042,8 @@ which is not benign.}
 %\end{ytableau}%
 %EndExpansion
 %$ is not (since it has $\operatorname*{seplist}T=\left(  5,3,4\right)  $).
-Notice that 12-rpps are benign 12-tables, but the converse is not true. If $T$ is a benign 12-table, then%
+
+All 12-rpps are benign 12-tables, but the converse is not true. If $T$ is a benign 12-table, then%
 \begin{align}
 &  \text{there exists no descent }k\text{ of }T\text{ such that both the
 }k\text{-th column of }T\nonumber\\
@@ -2826,12 +2832,14 @@ on different rows.)}.
 
 For each integer $i$, the set of all integers $j$ such that $(i,j),(i+1,j)\in\lm$ is just an interval $[\mu_{i}+1,\lambda_{i+1}]$, which we call \textit{the support of $i$} and denote $\supp(i):=[\mu_{i}+1,\lambda_{i+1}]$.
 
+Let $\#\kappa$ denote the length of a partition $\kappa$.
+
 We say that a partition $\seplistvar$ is \textit{admissible} if
 every $k$ satisfies $\supp(i_k) \neq \varnothing$. (This is
 clearly satisfied when there exist $j_1<j_2<\cdots<j_s$
 satisfying (\ref{cond:necessary}), but also in other cases.)
 Assume that $\seplistvar = \left(i_1 \geq \cdots \geq i_s > 0\right)$ is an admissible partition.
-For two integers $a< b$, we let $\nuab$ denote the subpartition $(i_r,i_{r+1},\dots,i_{r+q})$ of $\seplistvar$, where $[r, r+q]$ is the (possibly empty) set of all $k$ for which $\supp(i_k)\subseteq [a,b)$. In this case, we put\footnote{Here and in the following, $\#\kappa$ denotes the length of a partition $\kappa$.} $\#\nuab:=q+1$, which is just the number of entries in $\nuab$. Similarly, we set $\nuabcap$ to be the subpartition $(i_r,i_{r+1},\dots,i_{r+q})$ of $\seplistvar$, where $[r, r+q]$ is the set of all $k$ for which $\supp(i_k)\cap [a,b)\neq\emptyset$.
+For two integers $a< b$, we let $\nuab$ denote the subpartition $(i_r,i_{r+1},\dots,i_{r+q})$ of $\seplistvar$, where $[r, r+q]$ is the (possibly empty) set of all $k$ for which $\supp(i_k)\subseteq [a,b)$. Thus, the number of entries in $\nuab$ is $\#\nuab =q+1$. Similarly, we set $\nuabcap$ to be the subpartition $(i_r,i_{r+1},\dots,i_{r+q})$ of $\seplistvar$, where $[r, r+q]$ is the set of all $k$ for which $\supp(i_k)\cap [a,b)\neq\emptyset$.
 For example, for $\seplistvar=(4,3,3,2)$ and $\lm$ as on Figure \ref{fig:seplist}, we have 
 $$\supp(3)=[3,4],\ \supp(2)=[4,7],\ \supp(4)=[1,4],$$ 
 $$\nuxy{2}{7}=(3,3),\ \nuxy{2}{8}=(3,3,2),\ \nuxy{4}{8}=(2),\ \nuxycap{4}{5}=(4,3,3,2),\ \#\nuxy{2}{7}=2.$$
@@ -3067,8 +3075,11 @@ Take any 12-rpp $T\in\OneTwoRPPCutvar$ with $\seplist(T)=\seplistvar$ and with $
 % [DG] You didn't "slide" $\widetilde{\lm}$ to the left (i.e., relabel the columns) in the previous proof, so better not do it here either.
 for some $b>1$. In this case we can remove these $b-1$ nonempty columns from $\widetilde{\lm}$ and remove the first $b-1$ entries from $\nu$ to get an irreducible partition again\footnote{This follows from Lemma \ref{lemma:irreducible} \textbf{(c)} (applied to the skew shape $\widetilde{\lm}$ and $k=1$). Here we are using the fact that if we apply Lemma \ref{lemma:irreducible} \textbf{(a)} to $\widetilde{\lm}$ instead of $\lm$, then we get $r = 1$ (because if $r \geq 2$, then $\#\nuxy{a_2}{b_2} = \#\nuxy{a_2}{b_2}^{\widetilde{\lm}} = b_2-a_2$ in contradiction to the irreducibility of $\lm$).}, to which we can apply the induction hypothesis. We are done with the case $m>0$. If $m<\lambda_1-\#\seplistvar$ then we can apply a mirrored argument to the last column, and it remains to note that the cases $m>0$ and $m<\lambda_1-\#\seplistvar$ cover everything (since the irreducibility of $\nu$ shows that $\lambda_1-\#\seplistvar>0$).
 
-This inductive proof shows the uniqueness of the 12-rpp with desired properties. Its existence follows from a parallel argument, using the observation that the first $b-1$ columns of $\widetilde{\lm}$ can actually be filled in. This amounts to showing that for a representable $\seplistvar$, the set $\OneTwoRPPCutvar$ is non-empty in the case when $\lambda_1 = \#\seplistvar$ (so all columns of $T \in \OneTwoRPPCutvar$ must be mixed). This is clear when there is just one column, and the general case easily follows by induction on the number of columns\footnote{In more detail: \par
-If we had $1 \notin \supp(\seplistvar_1)$, then we would have $\supp(\seplistvar_1) \subseteq [2, \lambda_1+1)$, and thus $\supp(\seplistvar_j) \subseteq [2, \lambda_1+1)$ for every $j$ (since $\seplistvar$ is weakly decreasing and since $\supp(\seplistvar_1)$ is nonempty), which would lead to $\nuxy{2}{\lambda_1+1} = \seplistvar$ and thus $\#\nuxy{2}{\lambda_1+1} = \#\seplistvar = \lambda_1 > \lambda_1 + 1 - 2$, contradicting the representability of $\seplistvar$. Hence, we have $1 \in \supp(\seplistvar_1)$, so that we can fill the first column of $\lm$ with $1$'s and $2$'s in such a way that it becomes mixed and the $1$'s are displaced by $2$'s at level $\seplistvar_1$. Now, let $\widetilde{\lm}$ be the skew partition $\lm$ without its first column, and $\widetilde{\seplistvar}$ be the partition $\left(\seplistvar_2, \seplistvar_3, \ldots\right)$. Then, the partition $\widetilde{\seplistvar}$ is representable with respect to $\widetilde{\lm}$. (Otherwise we would have $\#\nuxy{2}{b+1}^{\widetilde{\lm}}>b-1$ for some $b \geq 1$, but then we would have $\supp(\seplistvar_1) \subseteq [1,b+1)$ as well and therefore $\#\nuxy{1}{b+1}>(b-1)+1=b$, contradicting the representability of $\lm$.) Thus we can fill in the entries in the cells of $\widetilde{\lm}$ by induction.}.
+This inductive proof shows the uniqueness of the 12-rpp with desired properties. Its existence follows from a parallel argument, using the observation that the first $b-1$ columns of $\widetilde{\lm}$ can actually be filled in. This amounts to showing that for a representable $\seplistvar$, the set $\OneTwoRPPCutvar$ is non-empty in the case when $\lambda_1 = \#\seplistvar$ (so all columns of $T \in \OneTwoRPPCutvar$ must be mixed).
+
+This is clear when there is just one column. To prove it in the general case, we proceed by induction on the number of columns:
+
+If we had $1 \notin \supp(\seplistvar_1)$, then we would have $\supp(\seplistvar_1) \subseteq [2, \lambda_1+1)$, and thus $\supp(\seplistvar_j) \subseteq [2, \lambda_1+1)$ for every $j$ (since $\seplistvar$ is weakly decreasing and since $\supp(\seplistvar_1)$ is nonempty), which would lead to $\nuxy{2}{\lambda_1+1} = \seplistvar$ and thus $\#\nuxy{2}{\lambda_1+1} = \#\seplistvar = \lambda_1 > \lambda_1 + 1 - 2$, contradicting the representability of $\seplistvar$. Hence, we have $1 \in \supp(\seplistvar_1)$, so that we can fill the first column of $\lm$ with $1$'s and $2$'s in such a way that it becomes mixed and the $1$'s are displaced by $2$'s at level $\seplistvar_1$. Now, let $\widetilde{\lm}$ be the skew partition $\lm$ without its first column, and $\widetilde{\seplistvar}$ be the partition $\left(\seplistvar_2, \seplistvar_3, \ldots\right)$. Then, the partition $\widetilde{\seplistvar}$ is representable with respect to $\widetilde{\lm}$. (Otherwise we would have $\#\nuxy{2}{b+1}^{\widetilde{\lm}}>b-1$ for some $b \geq 1$, but then we would have $\supp(\seplistvar_1) \subseteq [1,b+1)$ as well and therefore $\#\nuxy{1}{b+1}>(b-1)+1=b$, contradicting the representability of $\lm$.) Thus we can fill in the entries in the cells of $\widetilde{\lm}$ by induction.
 \end{proof}
 
 
