--- a/groth1.tex
+++ b/groth1.tex
@@ -177,6 +177,8 @@ functions and partitions should start reading from Section
 
 \end{comment}
 
+%test
+
 Let $\lambda/\mu$ be a skew partition. The Schur function $s_{\lambda/\mu}$ is
 a multivariate generating function for the semistandard tableaux of shape
 $\lambda/\mu$. In the same vein, the dual stable Grothendieck
